5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1577_1332.log
== TEST (2019-03-21 18:17:23) 
-- CODE:
print(round(2*6.1728/4)
-- ERROR:
File "XXXX", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:17:28) 
-- CODE:
print(round(2*6.1728/4)
-- EXECUTION TIME:
0.132786
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:17:38) 
-- CODE:
print(round(2**6.1728/4)
-- ERROR:
File "XXXX", line 2
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:27) 
-- CODE:
print(round(2**6.1728,4))
-- OUTPUT:
72.1436
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:44) 
-- CODE:
print(round(2*6.1728,4))
-- OUTPUT:
12.3456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:18:48) 
-- CODE:
print(round(2*6.1728,4))
-- EXECUTION TIME:
0.174353
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.3456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:52) 
-- CODE:
print(round(2*6.1728,4))
-- OUTPUT:
12.3456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:56) 
-- CODE:
print(round(2*6.1728,4))
-- OUTPUT:
12.3456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:57) 
-- CODE:
print(round(2*6.1728,4))
-- OUTPUT:
12.3456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:24:53) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
 
print(round(area,4 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:34) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area,4 ))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:25:38) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a
 
print(round(area,4 ))
-- EXECUTION TIME:
0.131518
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
